2000-04-16  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10771: Etc/MACHINES: successful compilation on OpenBSD, from
	Anthony Schneider.

	* 10771: Doc/Zsh/builtins.yo, Doc/Zsh/options.yo, Src/builtin.c,
	Src/options.c, Src/zsh.h: New option GLOBAL_EXPORT set by default
	makes typeset -x equivalent to typeset -gx.

2000-04-15  Clint Adams  <schizo@debian.org>

	* 10768: configure.in: DLLDFLAGS for OpenBSD.

2000-04-14  Clint Adams  <schizo@debian.org>

	* 10764: Radim Kolar: Functions/Misc/run-help: support
	for reserved words and multiple arguments being passed
	on to man.

	* 10763: Completion/Builtins/_vars_eq: complete after :

2000-04-14  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10760: Completion/User/_diff_options: just some missing `+'s

2000-04-14  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 10756, 10761: Doc/Zsh/expn.yo, Src/glob.c, Src/pattern.c,
	Src/zsh.h: fix (#s) and (#e) to work in allerlei parameter
	substitutions; fix potential problem with (#e) in exclusions; note
	things in manual which should work.

2000-04-13  Clint Adams  <schizo@debian.org>

	* 10748: configure.in: set MAXJOB to whatever you want.

	* 10745: acconfig.h, configure.in, Src/zsh.h: set MAXJOB
	to MAX_TASKS_PER_USER if available under Linux.

2000-04-13  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 10743: Src/params.c: replenv() failed importing special params
	at start up because it was using the wrong environment block.

	* 10738: Doc/Zsh/builtins.yo, Doc/Zsh/params.yo, Src/builtin.c,
	Src/params.c: local parameters can be exported; typeset +g -x
	and local -x work in a natural way; currently typeset -g still
	behaves like typeset -gx.

2000-04-13  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10733: Completion/Builtins/_pids, Completion/User/_killall,
 	Doc/Zsh/compsys.yo: remove the `pids' tag, use `processes' instead
	
	* 10727: Src/builtin.c: make read -[kq] always print the prompt,