@@ -1,3 +1,8 @@
+2000-04-17  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>
+
+	* 10774: Src/Zle/compmatch.c: fix for partial word completion with
+ 	empty parts and common suffix
+	
 2000-04-16  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
 
 	* 10771: Etc/MACHINES: successful compilation on OpenBSD, from
